[package]
name = "nullshell"
version = "1.0.0"
edition = "2021"

[dependencies]
crossterm = "0.26"
ratatui = "0.26"
sysinfo = "0.28"
clipboard = "0.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0"
toml = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
